--- a/styles/global.css
+++ b/styles/global.css
@@ -74,6 +74,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+    color: inherit;
+    text-decoration: none !important;
+}
+
 table {
     font-size: 14px;
 }
